# prompt-anonymizer

./: .gitignore  PLAN.md  README.md  docker-compose.dev.yml  litellm.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  test_pii_detection.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  dlp_management.py  pii.py
backend/app/auth/: deps.py  security.py
backend/app/core/: llm_client.py  settings.py
backend/app/db/: base.py  models.py  session.py
backend/app/dlp/: __init__.py  client.py  placeholder.py  policy.py  policy_manager.py
backend/app/llm/: client.py
backend/app/rbac/: enforcer.py  policy.csv
backend/app/routers/: llm.py
backend/app/schemas/: auth.py
backend/app/scripts/: create_default_dlp_policies.py  evaluate_anonymization.py  generate_synthetic_pii_dataset.py  seed_roles_users.py
backend/app/utils/: audit.py
backend/migrations/: env.py
backend/migrations/versions/: c511e97582d2_initial_schema_with_admin_panel.py  f6234ac89eb7_add_advanced_dlp_policy_management_.py
docs/docs/: local-first-ai-chat-roadmap.md  pii-examples.csv  run-commands.txt
docs/reports/: anonymization_evaluation_report.md
frontend/apps/admin/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/apps/admin/components/: DLPAnalyticsDashboard.tsx  LanguageToggle.tsx
frontend/apps/admin/lib/: utils.ts
frontend/apps/admin/pages/: _app.tsx  (+2 more)
frontend/apps/web/: next-i18next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
(+32 files in other folders)
