[tool.poetry]
name = "enterprise-agent-backend"
version = "0.1.0"
description = "Local-first AI chat backend"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
SQLAlchemy = "^2.0.30"
psycopg = {version = "^3.1.19", extras=["binary"]}
alembic = "^1.13.1"
passlib = {version = "^1.7.4", extras=["bcrypt"]}
# Pin bcrypt to avoid passlib compatibility issue
bcrypt = "==4.3.0"
pyjwt = "^2.8.0"
casbin = "^1.39.0"
httpx = "^0.27.0"
redis = "^5.0.5"
loguru = "^0.7.2"
openai = "1.*"  # added

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"